--- a/MDP/MDP.ioc
+++ b/MDP/MDP.ioc
@@ -3,25 +3,25 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,FootprintOK,Mutexes01,Queues01
-FREERTOS.Mutexes01=EncoderLeftMutex,Static,EncoderLeftMutexControlBlock,Available;EncoderRightMutex,Static,EncoderRightMutexControlBlock,Available
-FREERTOS.Queues01=cmdQueue,16,uint8_t,0,Dynamic,NULL,NULL
-FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;show,-3,128,StartTask02,Default,NULL,Dynamic,NULL,NULL;Encoder,-3,128,EncoderTask,Default,NULL,Dynamic,NULL,NULL;MoveStraight,-3,128,StartStraight,Default,NULL,Dynamic,NULL,NULL;motorTask,-3,128,MotorTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.IPParameters=Tasks01,FootprintOK,Mutexes01
+FREERTOS.Mutexes01=EncoderLeftMutex,Static,EncoderLeftMutexControlBlock,Depleted;EncoderRightMutex,Static,EncoderRightMutexControlBlock,Depleted;IMUReadMutex,Static,IMUReadMutexControlBlock,Available
+FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;show,-3,128,StartTask02,Default,NULL,Dynamic,NULL,NULL;Encoder,-3,128,EncoderTask,Default,NULL,Dynamic,NULL,NULL;MoveStraight,-3,128,StartStraight,Default,NULL,Dynamic,NULL,NULL;motorTask,-3,128,MotorTask,Default,NULL,Dynamic,NULL,NULL;icmTask,0,512,ICMUpdate,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F407VET6
 Mcu.Family=STM32F4
 Mcu.IP0=FREERTOS
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=TIM1
-Mcu.IP5=TIM2
-Mcu.IP6=TIM3
-Mcu.IP7=TIM8
-Mcu.IP8=USART3
-Mcu.IPNb=9
+Mcu.IP1=I2C1
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=TIM1
+Mcu.IP6=TIM2
+Mcu.IP7=TIM3
+Mcu.IP8=TIM8
+Mcu.IP9=USART3
+Mcu.IPNb=10
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE5
@@ -34,13 +34,15 @@ Mcu.Pin14=PA15
 Mcu.Pin15=PC10
 Mcu.Pin16=PC11
 Mcu.Pin17=PB3
-Mcu.Pin18=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin19=VP_SYS_VS_Systick
+Mcu.Pin18=PB6
+Mcu.Pin19=PB7
 Mcu.Pin2=PA2
-Mcu.Pin20=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin21=VP_TIM8_VS_ClockSourceINT
-Mcu.Pin22=VP_TIM8_VS_no_output1
-Mcu.Pin23=VP_TIM8_VS_no_output2
+Mcu.Pin20=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin21=VP_SYS_VS_Systick
+Mcu.Pin22=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin23=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin24=VP_TIM8_VS_no_output1
+Mcu.Pin25=VP_TIM8_VS_no_output2
 Mcu.Pin3=PA3
 Mcu.Pin4=PA4
 Mcu.Pin5=PA5
@@ -48,7 +50,7 @@ Mcu.Pin6=PA6
 Mcu.Pin7=PA7
 Mcu.Pin8=PE7
 Mcu.Pin9=PE8
-Mcu.PinsNb=24
+Mcu.PinsNb=26
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VETx
@@ -93,6 +95,10 @@ PA7.Locked=true
 PA7.Signal=S_TIM3_CH2
 PB3.Locked=true
 PB3.Signal=S_TIM2_CH2
+PB6.Mode=I2C
+PB6.Signal=I2C1_SCL
+PB7.Mode=I2C
+PB7.Signal=I2C1_SDA
 PC10.Locked=true
 PC10.Mode=Asynchronous
 PC10.Signal=USART3_TX
@@ -162,7 +168,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM8_Init-TIM8-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_USART3_UART_Init-USART3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM8_Init-TIM8-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_USART3_UART_Init-USART3-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_I2C1_Init-I2C1-false-HAL-true
 RCC.AHBFreq_Value=16000000
 RCC.APB1Freq_Value=16000000
 RCC.APB2Freq_Value=16000000
