--- a/MDP/MDP.ioc
+++ b/MDP/MDP.ioc
@@ -1,62 +1,120 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_13
+ADC1.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV8
+ADC1.ContinuousConvMode=ENABLE
+ADC1.DMAContinuousRequests=ENABLE
+ADC1.IPParameters=Rank-2\#ChannelRegularConversion,master,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,NbrOfConversionFlag,NbrOfConversion,ScanConvMode,ContinuousConvMode,DMAContinuousRequests,ClockPrescaler
+ADC1.NbrOfConversion=1
+ADC1.NbrOfConversionFlag=1
+ADC1.Rank-2\#ChannelRegularConversion=1
+ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
+ADC1.ScanConvMode=DISABLE
+ADC1.master=1
+ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_11
+ADC2.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV8
+ADC2.ContinuousConvMode=ENABLE
+ADC2.DMAContinuousRequests=ENABLE
+ADC2.IPParameters=Rank-0\#ChannelRegularConversion,ClockPrescaler,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,DMAContinuousRequests
+ADC2.NbrOfConversionFlag=1
+ADC2.Rank-0\#ChannelRegularConversion=1
+ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC1.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.ADC1.0.Instance=DMA2_Stream0
+Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
+Dma.ADC1.0.Mode=DMA_CIRCULAR
+Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
+Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.ADC2.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC2.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.ADC2.1.Instance=DMA2_Stream2
+Dma.ADC2.1.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.ADC2.1.MemInc=DMA_MINC_ENABLE
+Dma.ADC2.1.Mode=DMA_CIRCULAR
+Dma.ADC2.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.ADC2.1.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC2.1.Priority=DMA_PRIORITY_LOW
+Dma.ADC2.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.Request0=ADC1
+Dma.Request1=ADC2
+Dma.RequestsNb=2
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,FootprintOK,Mutexes01
-FREERTOS.Mutexes01=EncoderLeftMutex,Static,EncoderLeftMutexControlBlock,Depleted;EncoderRightMutex,Static,EncoderRightMutexControlBlock,Depleted;IMUReadMutex,Static,IMUReadMutexControlBlock,Available
-FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;show,-3,128,StartTask02,Default,NULL,Dynamic,NULL,NULL;Encoder,-3,128,EncoderTask,Default,NULL,Dynamic,NULL,NULL;MoveStraight,-3,128,StartStraight,Default,NULL,Dynamic,NULL,NULL;motorTask,-3,128,MotorTask,Default,NULL,Dynamic,NULL,NULL;icmTask,0,512,ICMUpdate,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.IPParameters=Tasks01,FootprintOK,Mutexes01,configENABLE_FPU
+FREERTOS.Mutexes01=EncoderLeftMutex,Static,EncoderLeftMutexControlBlock,Depleted;EncoderRightMutex,Static,EncoderRightMutexControlBlock,Depleted;IMUReadMutex,Static,IMUReadMutexControlBlock,Depleted;IRMutex,Static,IRMutexControlBlock,Available;UltrasonicMutex,Static,UltrasonicMutexControlBlock,Available
+FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;show,-3,128,StartTask02,Default,NULL,Dynamic,NULL,NULL;Encoder,-3,128,EncoderTask,Default,NULL,Dynamic,NULL,NULL;MoveStraight,-3,256,StartStraight,Default,NULL,Dynamic,NULL,NULL;motorTask,-3,256,MotorTask,Default,NULL,Dynamic,NULL,NULL;icmTask,0,1024,ICMUpdate,Default,NULL,Dynamic,NULL,NULL;infraTask,-3,128,IRTask,Default,NULL,Dynamic,NULL,NULL;ultrasonicTask,-3,128,UltrasonicTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.configENABLE_FPU=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F407VET6
 Mcu.Family=STM32F4
-Mcu.IP0=FREERTOS
-Mcu.IP1=I2C1
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IP5=TIM1
-Mcu.IP6=TIM2
-Mcu.IP7=TIM3
-Mcu.IP8=TIM8
-Mcu.IP9=USART3
-Mcu.IPNb=10
+Mcu.IP0=ADC1
+Mcu.IP1=ADC2
+Mcu.IP10=TIM3
+Mcu.IP11=TIM4
+Mcu.IP12=TIM6
+Mcu.IP13=TIM8
+Mcu.IP14=USART3
+Mcu.IP2=DMA
+Mcu.IP3=FREERTOS
+Mcu.IP4=I2C1
+Mcu.IP5=NVIC
+Mcu.IP6=RCC
+Mcu.IP7=SYS
+Mcu.IP8=TIM1
+Mcu.IP9=TIM2
+Mcu.IPNb=15
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE5
 Mcu.Pin1=PE6
-Mcu.Pin10=PE10
-Mcu.Pin11=PE14
-Mcu.Pin12=PC6
-Mcu.Pin13=PC7
-Mcu.Pin14=PA15
-Mcu.Pin15=PC10
-Mcu.Pin16=PC11
-Mcu.Pin17=PB3
-Mcu.Pin18=PB6
-Mcu.Pin19=PB7
-Mcu.Pin2=PA2
-Mcu.Pin20=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin21=VP_SYS_VS_Systick
-Mcu.Pin22=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin23=VP_TIM8_VS_ClockSourceINT
-Mcu.Pin24=VP_TIM8_VS_no_output1
-Mcu.Pin25=VP_TIM8_VS_no_output2
-Mcu.Pin3=PA3
-Mcu.Pin4=PA4
-Mcu.Pin5=PA5
-Mcu.Pin6=PA6
-Mcu.Pin7=PA7
-Mcu.Pin8=PE7
-Mcu.Pin9=PE8
-Mcu.PinsNb=26
+Mcu.Pin10=PE7
+Mcu.Pin11=PE8
+Mcu.Pin12=PE10
+Mcu.Pin13=PE12
+Mcu.Pin14=PE13
+Mcu.Pin15=PE14
+Mcu.Pin16=PD12
+Mcu.Pin17=PD13
+Mcu.Pin18=PC6
+Mcu.Pin19=PC7
+Mcu.Pin2=PC1
+Mcu.Pin20=PA15
+Mcu.Pin21=PC10
+Mcu.Pin22=PC11
+Mcu.Pin23=PB3
+Mcu.Pin24=PB8
+Mcu.Pin25=PB9
+Mcu.Pin26=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin27=VP_SYS_VS_Systick
+Mcu.Pin28=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin29=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin3=PC3
+Mcu.Pin30=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin31=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin32=VP_TIM8_VS_no_output1
+Mcu.Pin33=VP_TIM8_VS_no_output2
+Mcu.Pin4=PA2
+Mcu.Pin5=PA3
+Mcu.Pin6=PA4
+Mcu.Pin7=PA5
+Mcu.Pin8=PA6
+Mcu.Pin9=PA7
+Mcu.PinsNb=34
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VETx
 MxCube.Version=6.12.0
 MxDb.Version=DB.6.0.120
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.DMA2_Stream0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA2_Stream2_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -69,6 +127,7 @@ NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true\:false\:true\:false
+NVIC.TIM4_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.USART3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA15.Locked=true
@@ -95,16 +154,22 @@ PA7.Locked=true
 PA7.Signal=S_TIM3_CH2
 PB3.Locked=true
 PB3.Signal=S_TIM2_CH2
-PB6.Mode=I2C
-PB6.Signal=I2C1_SCL
-PB7.Mode=I2C
-PB7.Signal=I2C1_SDA
+PB8.Locked=true
+PB8.Mode=I2C
+PB8.Signal=I2C1_SCL
+PB9.Locked=true
+PB9.Mode=I2C
+PB9.Signal=I2C1_SDA
+PC1.Locked=true
+PC1.Signal=ADCx_IN11
 PC10.Locked=true
 PC10.Mode=Asynchronous
 PC10.Signal=USART3_TX
 PC11.Locked=true
 PC11.Mode=Asynchronous
 PC11.Signal=USART3_RX
+PC3.Locked=true
+PC3.Signal=ADCx_IN13
 PC6.GPIOParameters=GPIO_Label
 PC6.GPIO_Label=PWMLEFT
 PC6.Locked=true
@@ -113,10 +178,25 @@ PC7.GPIOParameters=GPIO_Label
 PC7.GPIO_Label=PWMRIGHT
 PC7.Locked=true
 PC7.Signal=S_TIM8_CH2
+PD12.GPIOParameters=GPIO_Label
+PD12.GPIO_Label=ULTRA_ECHO
+PD12.Locked=true
+PD12.Signal=S_TIM4_CH1
+PD13.GPIOParameters=GPIO_Label
+PD13.GPIO_Label=ULTRA_TRIG
+PD13.Locked=true
+PD13.Signal=GPIO_Output
 PE10.GPIOParameters=GPIO_Label
 PE10.GPIO_Label=LED
 PE10.Locked=true
 PE10.Signal=GPIO_Output
+PE12.GPIOParameters=GPIO_Label
+PE12.GPIO_Label=IR_LEFT
+PE12.Signal=GPIO_Analog
+PE13.GPIOParameters=GPIO_Label
+PE13.GPIO_Label=IR_RIGHT
+PE13.Locked=true
+PE13.Signal=GPIO_Analog
 PE14.GPIOParameters=GPIO_Label
 PE14.GPIO_Label=PWM_SERVO
 PE14.Locked=true
@@ -168,7 +248,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM8_Init-TIM8-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_USART3_UART_Init-USART3-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_I2C1_Init-I2C1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM8_Init-TIM8-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true,8-MX_USART3_UART_Init-USART3-false-HAL-true,9-MX_I2C1_Init-I2C1-false-HAL-true,10-MX_ADC1_Init-ADC1-false-HAL-true,11-MX_TIM4_Init-TIM4-false-HAL-true,12-MX_ADC2_Init-ADC2-false-HAL-true,13-MX_TIM6_Init-TIM6-false-HAL-true
 RCC.AHBFreq_Value=16000000
 RCC.APB1Freq_Value=16000000
 RCC.APB2Freq_Value=16000000
@@ -189,6 +269,10 @@ RCC.VCOI2SOutputFreq_Value=192000000
 RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=192000000
 RCC.VcooutputI2S=96000000
+SH.ADCx_IN11.0=ADC2_IN11,IN11
+SH.ADCx_IN11.ConfNb=1
+SH.ADCx_IN13.0=ADC1_IN13,IN13
+SH.ADCx_IN13.ConfNb=1
 SH.S_TIM1_CH4.0=TIM1_CH4,PWM Generation4 CH4
 SH.S_TIM1_CH4.ConfNb=1
 SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Encoder_Interface
@@ -199,6 +283,8 @@ SH.S_TIM3_CH1.0=TIM3_CH1,Encoder_Interface
 SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2,Encoder_Interface
 SH.S_TIM3_CH2.ConfNb=1
+SH.S_TIM4_CH1.0=TIM4_CH1,Input_Capture1_from_TI1
+SH.S_TIM4_CH1.ConfNb=1
 SH.S_TIM8_CH1.0=TIM8_CH1
 SH.S_TIM8_CH1.ConfNb=1
 SH.S_TIM8_CH2.0=TIM8_CH2
@@ -216,6 +302,12 @@ TIM2.Period=65535
 TIM3.IC1Filter=10
 TIM3.IC2Filter=10
 TIM3.IPParameters=IC1Filter,IC2Filter
+TIM4.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
+TIM4.IPParameters=Channel-Input_Capture1_from_TI1,Prescaler,Period
+TIM4.Period=65535-1
+TIM4.Prescaler=16-1
+TIM6.IPParameters=Prescaler
+TIM6.Prescaler=15
 TIM8.Channel-PWM\ Generation1\ No\ Output=TIM_CHANNEL_1
 TIM8.Channel-PWM\ Generation2\ No\ Output=TIM_CHANNEL_2
 TIM8.IPParameters=Channel-PWM Generation1 No Output,Period,Channel-PWM Generation2 No Output
@@ -228,6 +320,10 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM4_VS_ClockSourceINT.Mode=Internal
+VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
+VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 VP_TIM8_VS_ClockSourceINT.Mode=Internal
 VP_TIM8_VS_ClockSourceINT.Signal=TIM8_VS_ClockSourceINT
 VP_TIM8_VS_no_output1.Mode=PWM Generation1 No Output
